--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,16 @@
 {
+  "extends": ["airbnb/base", "prettier"],
+  "plugins": ["prettier"],
   "env": {
-    "es6": true,
-    "node": true,
     "jest": true
   },
-  "parserOptions": {
-    "ecmaVersion": 2018
-  },
-  "extends": "eslint:recommended",
   "rules": {
-    "indent": [
+    "no-underscore-dangle": 0,
+    "func-names": "off",
+    "no-param-reassign": [
       "error",
-      2
+      { "props": true, "ignorePropertyModificationsFor": ["context"] }
     ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
+    "no-plusplus": "off"
   }
 }
