--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@feathersjs/socketio": "^4.3.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-nedb": "^5.0.1",
     "helmet": "^3.21.0",
     "immer": "^4.0.0",
+    "nedb": "^1.8.0",
     "resolve-command": "^0.20.25",
     "resolve-es": "^0.20.25",
     "resolve-storage-lite": "^0.20.25",
@@ -48,7 +50,33 @@
   "devDependencies": {
     "axios": "^0.19.0",
     "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^3.0.5",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.2"
+    "lint-staged": "^9.2.5",
+    "nodemon": "^1.19.2",
+    "post-merge-install": "^0.1.0",
+    "prettier": "^1.18.2"
+  },
+  "lint-staged": {
+    "*.{json,css,md}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "post-merge": "post-merge-install",
+      "post-rebase": "post-merge-install"
+    }
   }
 }
