--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "helmet": "^3.21.0",
     "immer": "^4.0.0",
     "nedb": "^1.8.0",
+    "pino": "^5.13.3",
     "resolve-command": "^0.20.25",
     "resolve-es": "^0.20.25",
     "resolve-storage-lite": "^0.20.25",
