--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@feathersjs/socketio": "^4.3.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-hooks-common": "^4.20.7",
     "feathers-nedb": "^5.0.1",
     "helmet": "^3.21.0",
     "immer": "^4.0.0",
