--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@feathersjs/socketio": "^4.3.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "faker": "^4.1.0",
     "feathers-hooks-common": "^4.20.7",
     "feathers-nedb": "^5.0.1",
     "helmet": "^3.21.0",
     "immer": "^4.0.0",
+    "inquirer": "^7.0.0",
     "nedb": "^1.8.0",
     "pino": "^5.13.3",
     "resolve-command": "^0.20.25",
