--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@feathersjs/express": "^4.3.1",
     "@feathersjs/feathers": "^4.3.1",
     "@feathersjs/socketio": "^4.3.1",
+    "commander": "^3.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "faker": "^4.1.0",
