--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "faker": "^4.1.0",
+    "fastest-validator": "^0.6.17",
     "feathers-hooks-common": "^4.20.7",
     "feathers-nedb": "^5.0.1",
     "helmet": "^3.21.0",
