--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "resolve-storage-lite": "^0.20.25",
     "serve-favicon": "^2.5.0",
     "uuid": "^3.3.3",
+    "vorpal": "^1.12.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
