--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pino-pretty": "^3.2.1",
     "resolve-command": "^0.20.25",
     "resolve-es": "^0.20.25",
+    "resolve-snapshot-lite": "^0.20.28",
     "resolve-storage-lite": "^0.20.25",
     "serve-favicon": "^2.5.0",
     "uuid": "^3.3.3",
